title-text - fix spacing top

--- a/front/style/theme/components/title-text.scss
+++ b/front/style/theme/components/title-text.scss
@@ -1,6 +1,10 @@
 .title-text {
   margin-bottom: rem(  80 );
 
+  .hero + & {
+    margin-top: rem( 80 );
+  }
+
   .title-text-content > *:not(div) {
     margin-left: auto;
     margin-right: auto;
